# madison

./: .gitignore  CHECKPOINT.md  LICENSE.md  PLAN.md  README.md  pyproject.toml
src/madison/: __init__.py  cli.py  exceptions.py
src/madison/api/: __init__.py  client.py  models.py  tool_caller.py
src/madison/core/: __init__.py  agent.py  agent_commands.py  agent_registry.py  config.py  history.py  model_registry.py  permissions.py  plan.py  plan_parser.py  session.py  session_manager.py  tool_executor.py  tools.py
src/madison/tools/: __init__.py  command_exec.py  file_ops.py  web_search.py
src/madison/utils/: __init__.py  cancellation.py  input_handler.py  setup.py
